[gd_scene format=3 uid="uid://d32l8rtuuhpmy"]

[ext_resource type="Script" uid="uid://qvma7m2dg0un" path="res://scripts/hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://nw0dhy4c6t3o" path="res://assets/fonts/Xolonium-Regular.ttf" id="2_8sq4i"]
[ext_resource type="Texture2D" uid="uid://cha62pradyww2" path="res://assets/HUD/gui/gui_buttons_vol1/sprites/buttons/g21526.png" id="3_6fi6k"]
[ext_resource type="Texture2D" uid="uid://dvqgk3iptryt6" path="res://assets/HUD/gui/gui_buttons_vol1/sprites/buttons/g23174.png" id="4_uo2fv"]
[ext_resource type="Texture2D" uid="uid://dafq0xwo6aoou" path="res://assets/HUD/gui/gui_buttons_vol1/sprites/buttons/g9236.png" id="5_5pdws"]
[ext_resource type="Texture2D" uid="uid://cqhiceehm4woi" path="res://assets/HUD/gui/gui_buttons_vol1/sprites/buttons/g9202.png" id="6_hd3ao"]
[ext_resource type="Texture2D" uid="uid://c1wsq0126wmg3" path="res://assets/HUD/gui/gui_buttons_vol1/sprites/buttons/g9244.png" id="7_0i1j5"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[sub_resource type="InputEventAction" id="InputEventAction_6fi6k"]
action = &"pause_game"

[sub_resource type="Shortcut" id="Shortcut_uo2fv"]
events = [SubResource("InputEventAction_6fi6k")]

[node name="HUD" type="CanvasLayer" unique_id=84231853]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="." unique_id=2103883676]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="." unique_id=1623774561]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -35.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="." unique_id=1614300194]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -37.5
offset_right = 240.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Dodge the Fishes!	"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="." unique_id=2006109384]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -156.0
offset_right = 50.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
shortcut = SubResource("Shortcut_8sq4i")
icon = ExtResource("3_6fi6k")
flat = true
expand_icon = true

[node name="PauseButton" type="TextureButton" parent="." unique_id=1083540566]
process_mode = 3
offset_left = 10.0
offset_top = 10.0
offset_right = 74.0
offset_bottom = 74.0
toggle_mode = true
shortcut = SubResource("Shortcut_uo2fv")
texture_normal = ExtResource("4_uo2fv")
texture_pressed = ExtResource("3_6fi6k")

[node name="MessageTimer" type="Timer" parent="." unique_id=1709370397]
wait_time = 2.0
one_shot = true

[node name="DifficultyMenu" type="Control" parent="." unique_id=686707521]
visible = false
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EasyButton" type="Button" parent="DifficultyMenu" unique_id=1890831847]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.5
offset_top = 108.0
offset_right = 77.5
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("5_5pdws")
flat = true

[node name="MediumButton" type="Button" parent="DifficultyMenu" unique_id=349919940]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.5
offset_top = 181.0
offset_right = 77.5
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("6_hd3ao")
flat = true

[node name="HardButton" type="Button" parent="DifficultyMenu" unique_id=572445631]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -77.5
offset_top = 251.0
offset_right = 77.5
offset_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("7_0i1j5")
flat = true

[connection signal="pressed" from="StartButton" to="." method="on_start_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="DifficultyMenu/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="DifficultyMenu/MediumButton" to="." method="_on_medium_button_pressed"]
[connection signal="pressed" from="DifficultyMenu/HardButton" to="." method="_on_hard_button_pressed"]
